--- a/scripts/templates/blog_post_pt.html.j2
+++ b/scripts/templates/blog_post_pt.html.j2
@@ -62,7 +62,7 @@
       "@type": "Person",
       "name": "Marlow Sousa",
       "url": "https://marlow.dev.br",
-      "jobTitle": "RPA Tech Lead"
+      "jobTitle": "Software Engineering Lead"
     },
     "publisher": {
       "@type": "Person",
@@ -114,7 +114,7 @@
       <div class="author-avatar">M</div>
       <div class="author-info">
         <div class="author-name">Marlow Sousa</div>
-        <div class="author-title">RPA Tech Lead na Omni Conectado</div>
+        <div class="author-title">Software Engineering Lead na Omni Conectado</div>
       </div>
     </div>
   </header>
